--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ coverage/
 # ─────────────────────────────
 # Local environment files
 # ─────────────────────────────
+.env
 
 
 # ─────────────────────────────
