--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "start":"nodemon index.js",
+    "start": "nodemon index.js",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
@@ -13,13 +13,17 @@
   "dependencies": {
     "@clerk/clerk-react": "^5.53.2",
     "@tailwindcss/vite": "^4.1.14",
+    "axios": "^1.13.2",
+    "framer-motion": "^12.23.24",
+    "lucide": "^0.554.0",
     "lucide-react": "^0.544.0",
-    "react": "^19.1.1",
+    "react": "^19.2.0",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
-    "react-player": "^3.3.3",
+    "react-player": "^3.4.0",
     "react-router-dom": "^7.9.5",
     "react-toastify": "^11.0.5",
+    "swiper": "^12.0.3",
     "tailwindcss": "^4.1.14"
   },
   "devDependencies": {
